--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,5 @@
 @import './styles/index';
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
+* {
+    font-family: 'Rubik', sans-serif;
+}
